# Synchronized-Zero-Latency-Engine

./: CMakeLists.txt  LICENSE  README.md  main.cpp
jni/: Android.mk
tool/: mods.hpp  readconfig.hpp
utils/: szenext.hpp  utils.hpp
